# agentic-ai-education

./: .env.example  .gitignore  CLAUDE.md  README.md
01_fastmcp_tool/: README.md  server.py
01_langchain_react/: pyproject.toml  simple_react.py
02-1_fastmcp_email/: .env.example  README.md  client.py  pyproject.toml  server.py
02_fastmcp_package/: README.md  fastmcp.json  pyproject.toml
02_fastmcp_package/hello_mcp/: server.py
02_fastmcp_package/hello_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
02_fastmcp_tool/: client.py  pyproject.toml
03_fastmcp_email/: README.md
03_langchain_react/: README.md  pyproject.toml  react_agent.py
04_crewai_team/: README.md  crew_run.py  pyproject.toml
04_fastmcp_package/: demo_client.py
04_fastmcp_package/hello_mcp/: __init__.py
04_langchain_mcp/: README.md  mcp_server.py  react_with_mcp.py
05_langchain_mcp/: .env.example  pyproject.toml
05_langchain_mcp/09_crewai_mcp/: .env.example  README.md
05_mem0_basics/: README.md  memory_demo.py  pyproject.toml
06_a2a_basics/: README.md  basic_chat.py  pyproject.toml
06_mem0_basics/: .env.example  README.md  memory_demo.py
07-1_crewai_mcp/: newsletter_server.py
07_a2a_basics/: README.md
07_a2a_mem0_profile/: README.md  personal_agents.py  pyproject.toml
07_crewai_team/: README.md  pyproject.toml
07_mem0_chat_assistant/: README.md  app.py  memory_utils.py  pyproject.toml
07_mem0_cli_chat/: .env.example  README.md  chat_cli.py  memory_utils.py  pyproject.toml
08_a2a_dual_agents/: README.md
08_a2a_dual_agents/crew_agent_server/: README.md  pyproject.toml  server.py
08_a2a_dual_agents/langgraph_agent_server/: pyproject.toml  server.py
08_a2a_dual_agents/orchestrator_ui/: pyproject.toml  server.py
08_a2a_dual_agents/orchestrator_ui/templates/: index.html
08_a2a_mem0_profile/: pyproject.toml
08_crewai_team/: README.md
09_a2a_dual_agents/crew_agent_server/: pyproject.toml
09_a2a_dual_agents/langgraph_agent_server/: pyproject.toml
09_a2a_mem0_profile/: README.md  pyproject.toml
09_crewai_mcp/: .env.example  README.md  newsletter_crew.py
10_a2a_airbnb/airbnb_agent/: README.md
10_a2a_airbnb/host_agent/: README.md  remote_agent_connection.py  routing_agent.py
10_a2a_airbnb/weather_agent/: README.md  __main__.py
10_a2a_dual_agents/: README.md
10_a2a_dual_agents/crew_agent_server/: pyproject.toml
10_a2a_dual_agents/langgraph_agent_server/: README.md  server.py
11_next_project/: README.md
11_next_project/a2a_basics/: README.md  pyproject.toml
airbnb_planner_multiagent/host_agent/: __main__.py  routing_agent.py
airbnb_planner_multiagent/weather_agent/: weather_agent.py
docs/: TEACHING_GUIDE.md  USER_MANUAL.md
docs/lesson_notes/: 01_fastmcp_tool.md  01_langchain_react.md  02_fastmcp_package.md  02_fastmcp_tool.md  03_fastmcp_email.md  03_fastmcp_package.md  03_langchain_react.md  04_crewai_team.md  04_fastmcp_package.md  04_langchain_mcp.md  05_crewai_team.md  05_langchain_mcp.md  05_mem0_basics.md  06_a2a_basics.md  06_mem0_basics.md  06_mem0_cli_chat.md  07_a2a_basics.md  07_crewai_team.md  (+12 more)
(+3 files in other folders)
