[project]
name = "fastmcp-email-demo"
version = "0.1.0"
description = "Email MCP server with HTTP transport, OpenAI composition and Gmail SMTP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12,<3.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "httpx>=0.25.0",
]

[tool.uv]
package = false