[project]
name = "mem0-chat-assistant"
version = "0.1.0"
description = "Streamlit chat demo combining LangChain and mem0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.39",
  "langchain>=0.3.0",
  "langchain-openai>=0.1.17",
  "mem0ai>=0.1.110",
  "python-dotenv>=1.0",
]

[tool.uv]
package = false
