[project]
name = "a2a-orchestrator-ui"
version = "0.1.0"
description = "Minimal FastAPI UI to orchestrate CrewAI & LangGraph agents via A2A-style protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[tool.uv]
package = false
