[project]
name = "a2a-crew-agent"
version = "0.1.0"
description = "CrewAI-based agent server for A2A orchestration demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "crewai>=0.193.0",
  "langchain-openai>=0.1.17",
  "python-dotenv>=1.0",
]

[tool.uv]
package = false
